--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         <a href="https://github.com/jpmartin22/machine-Learning/tree/main/Projects/Movies%20Recomender" target="_blank">View Project</a>
       </div>
       <div class="project-box">
+        <img src="gears-4126485.jpg" alt="Titanic Data Analysis">
+        <h2><span>Titanic Data Analysis:</span></h2>
+        <p>In this project, I conducted an in-depth analysis of the Titanic dataset to explore patterns and correlations related to passenger survival. The analysis involved data cleaning, feature engineering, and visualization to better understand the factors that influenced survival rates.</p>
+        <a href="https://github.com/jpmartin22/Automation-project-on-GSD-navigation-in-cognizant" target="_blank">View Project</a>
+      </div>
+      <div class="project-box">
         <img src="gears-4126485.jpg" alt="Internship Automation Project">
         <h2><span>Internship Automation Project:</span></h2>
         <p>An automation project developed during an internship at Cognizant to navigate their help portal, GSD.</p>
